# Memory-Vault-AI

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  refactor_to_vault.py
.github/workflows/: docs-pages.yml
docs/: index.md
docs/adr/: ADR-001-chroma-as-default-vector-store.md  ADR-002-chunking-strategy.md  ADR-003-four-memory-types.md  ADR-004-async-first-design.md  ADR-005-tiktoken-for-token-counting.md  ADR-006-chroma-collection-strategy.md  ADR-007-postgres-for-multi-instance.md
docs/api/: API_SPEC.md  SDK_API_SPEC.md
docs/architecture/: ARCHITECTURE.md
docs/guides/: BENCHMARKING.md  CONFIGURATION.md  DEPLOYMENT.md  MCP_INTEGRATION.md  PLUGIN_SYSTEM.md  SDK_GUIDE.md
docs/specs/: DATABASE_SCHEMA.md  MEMORY_LOGIC.md  PLUGIN_SYSTEM.md
memory_layer/: __init__.py  config.py  exceptions.py  models.py
memory_layer/api/: __init__.py  main.py  metrics.py  ui_page.py
memory_layer/budget/: __init__.py  manager.py
memory_layer/cli/: __init__.py  main.py
memory_layer/compression/: __init__.py  engine.py
memory_layer/ingestion/: __init__.py  embedder.py  engine.py
memory_layer/mcp/: __init__.py  server.py
memory_layer/plugins/: __init__.py  base.py  registry.py
memory_layer/prompt/: __init__.py  builder.py
memory_layer/retrieval/: __init__.py  engine.py  reranker.py  searcher.py
memory_layer/sdk/: __init__.py
memory_layer/storage/: __init__.py  base.py  chroma.py  composite.py  qdrant.py  sqlite.py
memory_vault/: __init__.py  config.py  exceptions.py  models.py
memory_vault/api/: __init__.py  main.py  metrics.py  ui_page.py
memory_vault/budget/: __init__.py  manager.py
memory_vault/cli/: __init__.py  main.py
memory_vault/compression/: __init__.py  engine.py
memory_vault/ingestion/: __init__.py  chunker.py  embedder.py  engine.py  scorer.py
memory_vault/mcp/: __init__.py  server.py
memory_vault/plugins/: __init__.py  base.py  registry.py
memory_vault/prompt/: __init__.py  builder.py
memory_vault/retrieval/: __init__.py  engine.py  reranker.py  searcher.py
memory_vault/sdk/: __init__.py
memory_vault/storage/: __init__.py  base.py  chroma.py  composite.py  qdrant.py  sqlite.py
scripts/benchmark/: run_benchmark_suite.py
scripts/smoke/: run_smoke_checklist.ps1
tests/fixtures/: sample_data.py
tests/unit/: test_api_main.py  (+31 more)
(+10 files in other folders)
